<resources>
    <string name="app_name">Style</string>

    <string name="app_author">Yalin</string>
    <string name="app_description">Style Live Wallpaper</string>

    <string name="settings_title">Style Settings</string>
    <string name="settings_blur_amount_title">Blur</string>
    <string name="settings_dim_amount_title">Dim</string>
    <string name="settings_grey_amount_title">Grey</string>
    <string name="settings_blur_on_lockscreen">Apply blur on lockscreen</string>

    <string name="action_activate">Active</string>
    <string name="action_settings">Customize</string>
    <string name="action_like">Like</string>
    <string name="action_unlike">Unlike</string>
    <string name="action_share">Share</string>

    <string name="done">Done</string>
    <string name="confirm">Confirm</string>
    <string name="hint">Hint</string>
    <string name="downloading">Downloading</string>


    <string name="section_choose_source">Sources</string>
    <string name="section_advanced">Advanced</string>
    <string name="action_source_settings">Customize source</string>

    <string name="reset_settings_defaults">Reset sliders</string>

    <string name="error_view_details">Couldn\'t view wallpaper details.</string>

    <string name="exception_message_device_unsupported">Your device unsupported live wallpaper.</string>
    <string name="exception_message_generic">There was some error.</string>
    <string name="exception_message_no_connection">There is no internet connection</string>
    <string name="exception_message_resync">Sync is processing</string>
    <string name="exception_message_remote_service">Remote service not available</string>
    <string name="exception_message_download">Download error</string>

    <string name="tutorial_main">Open the Style app to see your wallpaper</string>
    <string name="tutorial_subtitle">Double touch the blurred wallpaper on your home screen to temporarily focus
    \nStyle will update your wallpaper everyday</string>

    <string name="about_title">About Style</string>
    <string name="about_body"><![CDATA[
        Make the most of your desktop and give it the artistic flavor.<br><br>

        Use your famous works of art to easily refresh your screen.<br>Style will make these artwork back into the background to keep your icon in the spotlight.<br><br>

        Style is free and easy to use.<br>You can also feedback to the developer&#39;s mailbox:<br>
        <b><a href="mailto:jinkg@live.cn">jinkg@live.cn</a></b><br><br>

        <b><a href="http://www.kinglloy.com/">Visit home page</a></b>
    ]]></string>
    <string name="about_version_template">v%1$s</string>

    <string name="advance_hint"><![CDATA[
        Advance wallpaper is developed by different developers.<br><br>
        Use them may give you the equipment to bring different power consumption, performance consumption, even crash.<br><br>
        If you find such a problem, you can switch to other advance wallpaper, or contact Style developers.

        <br><br><b><a href="mailto:jinkg@live.cn">jinkg@live.cn</a></b><br>

        <b><a href="http://www.kinglloy.com/">Visit home page</a></b>
    ]]></string>

    <string name="advance_download_hint"><![CDATA[
        This advance wallpaper component is a bit big, and you must take a minute to download it(several hundred KB or several MB).<br><br>
        Press download button if you are ready to download.
    ]]></string>

    <string name="advance_ad_download_hint"><![CDATA[
        This advance wallpaper component is a bit big, and you must take a minute to download it(several hundred KB or several MB).<br><br>
        At the same time, This wallpaper contain a little ad, you must view a minute ad before use it.<br><br>
        Thank you for your support for the Style developer.<br><br>
        Press download button if you are ready to download and see ad.
    ]]></string>

    <string name="share_title">Share wallpaper</string>
    <string name="share_text">My Android wallpaper today is \' %1$s \' by %2$s. #StyleWallpaper\n\n
        %3$s</string>

    <string name="advance_empty_load">Load advance wallpaper</string>
    <string name="advance_empty_description">There has no advance wallpaper loaded.\nYou can load the wallpapers from server.</string>

    <string name="advance_retry">Retry</string>
    <string name="advance_retry_description">There has some problem.\nYou can reload the wallpaper,\nOr you can contact the developer.</string>

    <string name="advance_action_msg">Hint</string>

    <string name="advance_download_msg">Download</string>
    <string name="advance_ad_download_msg">Show Ad and download</string>

    <string name="gallery_empty">Random camera photos</string>
    <string name="gallery_empty_subtitle">Choose specific photos instead</string>

    <string name="gallery_enable_random">Enable random camera photos</string>
    <string name="gallery_permission_rationale">Allow the storage permission to show random photos as
        your background.</string>
    <string name="gallery_edit_settings">Edit App Permissions</string>
    <string name="gallery_denied_explanation">You must enable the <b>Storage</b> permission to use
        random photos as your background.</string>

    <string name="gallery_add_fab">Add photos</string>
    <string name="gallery_add_photos">Add photos</string>
    <string name="gallery_add_folder">Import photos from %s</string>

    <string name="gallery_internal_storage_message">Don\'t see anything? Try enabling internal storage in the overflow
        menu</string>
    <string name="gallery_add_photos_error">Your device does not support adding pictures.\nPlease contact your manufacturer.</string>
    <string name="gallery_add_folder_error">Your device does not support adding folders.\nPlease contact your manufacturer.</string>

    <string name="gallery_action_force_now">Set as wallpaper now</string>
    <string name="gallery_action_remove">Remove</string>
    <string name="gallery_temporary_force_image">Wallpaper set to selected image.</string>

    <string name="gallery_action_clear_photos">Remove all photos</string>
    <string name="gallery_action_rotate_interval">Change interval</string>
    <string name="gallery_action_rotate_interval_none">Don\'t change wallpaper</string>
    <string name="gallery_action_rotate_interval_1h">Every hour</string>
    <string name="gallery_action_rotate_interval_3h">Every 3 hours</string>
    <string name="gallery_action_rotate_interval_6h">Every 6 hours</string>
    <string name="gallery_action_rotate_interval_24h">Every 24 hours</string>
    <string name="gallery_action_rotate_interval_72h">Every 3 days</string>
    <string name="gallery_action_import_photos">Import photos…</string>
    <string name="gallery_action_import_photos_from">Import photos from %s</string>

    <string name="gallery_import_dialog_title">Import photos from</string>

    <string name="app_context_description">A living wallpaper for your home screen</string>
    <string name="app_context_uri">http://www.kinglloy.com/</string>

    <string name="shortcut_settings">Settings</string>
    <string name="shortcut_settings_advance">Advance Settings</string>
    <string name="shortcut_about">About</string>

</resources>
